current SVN version
	Isgl3dArray: added as container for any data type not just objective c objects (eg structs).
	Isgl3dNode: added clarity to method names involving transformations
	Isgl3dVector3, Isgl3dVector4, Isgl3dMatrix4: added and used in all internal calculations (performance gain)
	Isgl3dMatrix4D: deprecated. Use Isgl3dMatrix4 structure with c methods to store/manipulate 4D matrices (performance gain)
	Isgl3dVector4D: deprecated. Use Isgl3dVector4 structure with c methods to store/manipulate 3D vectors (performance gain)
	Isgl3dVector3D: deprecated. Use Isgl3dVector3 structure with c methods to store/manipulate 3D vectors (performance gain)
	Isgl3dMiniMat: deprecated. Functionality now in Isgl3dMatrix4
	Isgl3dMiniVec: deprecated. Functionality now in Isgl3dVector3 and Isgl3dVector4
	Isgl3dGLObject: removed - functionality added to Isgl3dNode (Isgl3dGLObject was a redundant internal class)
	Isgl3dNode: added isVisible property to allow nodes not to be rendered but remain in scene
	Added support for retina display

version 1.1.4 (2011-03-31)
	Isgl3dColorUtil: fix bug in returning rgb and rgba hex strings
	Isgl3dView: default isOpaque = NO (improved rendering, simplify UI overlay)
	Isgl3dView: default background color to Isgl3dDirector background color
	Isgl3dView: fix bug in combined device + view orientation
	Demos and tutorials updated for new architecture
	Added viewport test demo
	Isgl3dDirector, Isgl3dView: allow orientations as landscape or portrait (eg Isgl3dOrientationPortrait)
	Isgl3dPODImporter: modified for new architecture, remove dependence on Isgl3dView3D (deprecated)
	
	
version 1.1.3 (2011-03-28)
	Architecture changes with Isgl3dDirector and Isgl3dView:
		Isgl3dDirector: added - singleton for application control, manging animation, rendering, event handling, device rotation, etc
		Isgl3dView: added - replaces Isgl3dView3D and Isgl3dGLView (with help of Isgl3dDirector). Contains a camera, scene and viewport.